<resources>
    <string name="app_name">TouristApplication</string>
    <string name="resturants">Restaurant</string>
    <string name="entertainment">Entertainment</string>
    <string name="coffeshop">Coffee Shop</string>
    <string name="placename">Place name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="header_title" translatable="false">Find your</string>
    <string name="header_title2" translatable="false">Next Destination</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="edit">Edit Profile</string>
    <string name="residence">StudentHousing</string>
    <string name="libraries">Library</string>
    <string name="available">available</string>
    <string name="contact">Contact way</string>
    <string name="upload_post_txt">Upload Images</string>
    <string name="create_post_btn">Create</string>
    <string name="until">until</string>
    <string name="timeframe">"Choose time "</string>
    <string name="day">Days Open</string>
    <string name="time">Available between</string>


    <string name="Sat">Saturday</string>
    <string name="Sun"> Sunday</string>
    <string name="Mon">Monday</string>
    <string name="Tues">Tuesday</string>
    <string name="Wed">Wednesday</string>
    <string name="Thur">Thursday</string>
    <string name="Fri">Friday</string>

    <string-array name="category">
        <item>@string/residence</item>
        <item>@string/resturants</item>
        <item>@string/libraries</item>
        <item>@string/entertainment</item>

    </string-array>
    <string-array name="weekdays">
        <item>@string/Sat</item>
        <item>@string/Sun</item>
        <item>@string/Mon</item>
        <item>@string/Tues</item>
        <item>@string/Wed</item>
        <item>@string/Thur</item>
        <item>@string/Fri</item>

    </string-array>


    <string name="title_activity_admin_main" translatable="false">AdminMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="placeDetails">Place Details</string>
    <string name="Submit">Submit</string>
    <string name="cancel">cancel</string>
    <string name="edit_image">add image</string>
    <string name="updatepass">Update Password</string>
    <string name="style">Style</string>
    <string name="logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="logout_success">Logout Success</string>
    <string name="adcontrolpanel">Admin Control panel</string>
    <string name="newpost">New Post</string>
    <string name="desc">Description</string>
    <string name="opentime">open Time</string>
    <string name="closetime">close Time</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="contact_now">"Contact Now "</string>
    <string name="accounttype">account type</string>
    <string name="hint">"Hint : User cant uddate email and account type "</string>
    <string name="registertype">register as Place owner</string>
    <string name="update_pass">Update Password</string>
    <string name="oldpass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="change">Change</string>
    <string name="more">more</string>
    <string name="success">"Update Profile Success "</string>
    <string name="version_test">This feature available On Newer versions</string>
    <string name="YourPosts">Your Posts</string>
    <string name="update">update Post</string>
    <string name="deletepost">Delete Post</string>
    <string name="delete_title">Delete Alert !</string>
    <string name="delete_msg">Are you sure you want to delete this post ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>