<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item

            android:id="@+id/newpost"
            android:icon="@drawable/ic_addpost"
            android:title="@string/newpost" />
        <item

            android:id="@+id/listpost"
            android:icon="@drawable/ic_ownerposts"
            android:title="@string/YourPosts" />


        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/ownersettings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/ownerlogout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>