<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iconaddimg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_addimg" />

                <ImageSwitcher
                    android:id="@+id/img_upload_post"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    />


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/prevarrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_previous" />

                <Button
                    android:id="@+id/uploadimg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondry_appcolor"
                    android:gravity="center"
                    android:text="@string/upload_post_txt"
                    android:textSize="9dp"
                    android:textStyle="italic"

                    />

                <ImageView
                    android:id="@+id/nextarrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_next" />

            </LinearLayout>

        </LinearLayout>


        <EditText
            android:id="@+id/place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/blural"
            android:hint="@string/placename"
            android:padding="10dp" />


        <EditText
            android:id="@+id/desc_Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/blural"
            android:hint="@string/desc"
            android:maxLines="6"
            android:padding="10dp"
            android:scrollIndicators="start" />

        <EditText
            android:id="@+id/contact_Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/blural"
            android:hint="@string/contact"
            android:inputType="text"
            android:maxLines="6"
            android:padding="10dp"
            android:scrollIndicators="start" />


        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/contact_Name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"

                android:text="@string/day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_Name" />

            <Spinner
                android:id="@+id/fromdayspinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/until"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_Name" />

            <Spinner
                android:id="@+id/todayspinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/l1">


            <Button

                android:id="@+id/start_timebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondry_appcolor"

                android:text="@string/opentime"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/until"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_Name" />

            <Button
                android:id="@+id/end_timebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondry_appcolor"
                android:text="@string/closetime"
                android:textSize="13sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/createPlace_progress"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:indeterminateTint="@color/secondry_appcolor"
            android:visibility="invisible" />

        <Button
            android:id="@+id/createPlaceBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createPlace_progress"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:text="@string/create_post_btn"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>