<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/ic_launcher_foreground"
            app:civ_border_color="@color/primary_appcolor"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit_img_txt"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_img_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_image"

            android:textColor="@color/primary_appcolor"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_photo"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/textfield_blural"
        android:elevation="5dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:startIconDrawable="@drawable/ic_profile"
        app:startIconTint="@color/forth_appcolor"
        tools:layout_editor_absoluteX="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:focusableInTouchMode="true"
            android:gravity="start|center"
            android:textAlignment="viewStart"
            android:inputType="text"
            android:textColor="@color/primary_appcolor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/textfield_blural"
        android:elevation="5dp"
        android:focusable="false"
        android:gravity="end"
        android:hint="@string/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_phone"
        app:startIconTint="@color/forth_appcolor"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:enabled="false"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:inputType="text"
            android:textColor="@color/primary_appcolor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/textfield_blural"
        android:elevation="5dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/forth_appcolor"
        tools:layout_editor_absoluteX="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"

            android:gravity="start|center"
            android:textAlignment="viewStart"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_appcolor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/textfield_blural"
        android:elevation="5dp"
        android:hint="@string/accounttype"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:startIconDrawable="@drawable/ic_accounttype"
        app:startIconTint="@color/forth_appcolor"
        tools:layout_editor_absoluteX="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/type_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="start|center"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"

            android:textColor="@color/primary_appcolor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hint"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/start_editbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit"
        android:textSize="13sp" />

    <Button
        android:id="@+id/cancel_button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/darkgrey"
        android:text="@string/cancel"
        android:textSize="13sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/profileProgress"
        android:layout_width="25dp"
        android:visibility="gone"
        android:layout_height="25dp"
        android:layout_gravity="center"

        />

</LinearLayout>