<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LoginFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

android:layout_margin="16dp"
        android:background="@drawable/textfield_blural"
        android:hint="@string/email"
        android:outlineAmbientShadowColor="@color/forth_appcolor"
        android:outlineSpotShadowColor="@color/forth_appcolor"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/forth_appcolor"
        tools:layout_editor_absoluteX="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/textfield_blural"
        android:hint="@string/password"
        android:outlineAmbientShadowColor="@color/forth_appcolor"
        android:outlineSpotShadowColor="@color/forth_appcolor"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:passwordToggleTintMode="multiply"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/forth_appcolor"

        tools:layout_editor_absoluteX="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"

            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/abril_fatface"
        android:layout_gravity="end"
        android:padding="5dp"

        android:text="@string/forgot"
        android:textColor="@color/third_appcolor"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textSize="10sp"
        android:textStyle="italic"

        />
</LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/bluralloginlayout"
        android:background="#4674A1A6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" />
    <ProgressBar

        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="@color/primary_appcolor"
        android:layout_gravity="center"/>


</FrameLayout>